assets/css/blueprint.css
/* ... */
@media screen and (max-width: 364px) {
  .bp-masthead .masthead-layout {
    font-size: 11px;
    cursor: pointer;
  }
}

@media screen and (max-width: 340px) {
  .bp-masthead .masthead-layout {
    font-size: 10px;
    cursor: pointer;
  }
}

.avoidwrap {
  display: inline-block;
}

.bp-agencyhead {
  padding-top: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid #f0f0f0;
}
.bp-agencyhead img {
  width: 240px;
  height: auto;
}

.bp-footer {
  padding: 2rem;
  background-color: #323232;
}
.bp-footer .title {
  color: white;
}
.bp-footer .divider {
  border-top: 1px solid #484848;
}
.bp-footer .row {
  justify-content: flex-start;
}
.bp-footer a {
  color: #b7b7b7;
  font-size: 16px;
  padding-right: 12px;
  line-height: 20px !important;
}
.bp-footer a:hover {
  color: white;
}
.bp-footer p {
  color: #b7b7b7;
  line-height: 25px !important;
}
.bp-footer p + p {
  margin-top: 15px;
}
.bp-footer ul li {
  display: inline-block;
}
@media screen and (max-width: 768px) {
  .bp-footer ul li {
    display: block;
  }
}
.bp-footer ul li a {
  color: #b7b7b7;
}
.bp-footer ul li a:hover {
  color: white;
}
@media screen and (max-width: 768px) {
  .bp-footer ul li + li:not(.icons) {
    margin-left: 0;
    margin-top: 15px;
  }
}
.bp-footer.bp-footer-links li + li {
  margin-left: 10px;
}
.bp-footer .is-right-desktop-only {
  text-align: right;
  padding-top: 4px;
}
@media screen and (max-width: 769px) {
  .bp-footer .is-right-desktop-only {
    text-align: left;
  }
}

.bp-footer.top-section {
  padding-bottom: 16px;
}

.bp-footer.bottom-section {
  padding-bottom: 24px;
}
.bp-footer.bottom-section a,
.bp-footer.bottom-section p {
  font-size: 16px;
}

.last-updated {
  margin-top: 0px !important;
}

.footer-page-links a {
  font-size: 18px;
}

.footer-link-container {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
}

.social-link-container {
  display: flex;
  flex-wrap: wrap;
}

@media screen and (min-width: 1024px) {
  .social-link-container {
    justify-content: flex-end;
  }
}

.bp-footer.bottom-section p.footer-credits {
  font-size: 12px;
}

.bp-footer.bottom-section p.footer-credits a {
  font-size: 12px;
}

.bp-footer.bottom-section p.footer-credits a:hover {
  color: inherit;
}

.bp-footer.bottom-section p.footer-credits a:after {
  content: none;
}

.bp-footer.bottom-section p.footer-credits img {
  padding-left: 16px;
  padding-right: 32px;
  vertical-align: middle;
}

@media screen and (min-width: 769px) {
  .tablet-no-break {
    display: none;
  }
}

.bg-light {
  background-color: #f0f0f0;
}
.bg-white {
  background-color: white;
}
.bg-newssection {
  background-color: #f0f4f6;
}
.bg-prev-next {
  background-color: #6b4370;
}
.bg-table-grey {
  background-color: #f0f4f6;
}

.search-content {
  line-height: 1.5em;
}
.search-content a {
  text-decoration: underline;
}
.search-content .permalink {
  color: #767676;
}
.search-content p:last-child {
  margin-bottom: 0.8rem;
}
.search-content .search-summary {
  display: flex;
  justify-content: space-between;
}
.search-content .search-summary #search-page-indicator {
  display: none;
}

.bp-section.bp-section-pagetitle.search-section {
  padding-top: 60px;
  padding-bottom: 60px;
}
.bp-section.bp-section-pagetitle.search-section nav.bp-breadcrumb {
  margin-bottom: -5px;
}
.bp-section.bp-section-pagetitle.search-section #search-title {
  padding-top: 6px;
  padding-bottom: 6px;
}
.bp-section.bp-section-pagetitle.search-section #search-container {
  padding-top: 24px;
  padding-bottom: 24px;
}

.search-bar.sgds-icon.sgds-icon-search {
  top: 15px;
  left: 15px;
  display: block;
  visibility: initial;
  color: #767676;
}
.is-hidden-desktop .search-bar.sgds-icon.sgds-icon-search {
  top: 10px;
  left: 5px;
}

.bp-button.search-button {
  padding: 7px 24px !important;
  font-size: 15px !important;
  letter-spacing: 0.8px;
  font-weight: 600;
  height: 2.4rem;
}

.horizontal-scroll {
  overflow: auto;
}

.pagination {
  text-align: center;
  vertical-align: middle;
  text-decoration: none;
}
.pagination span {
  width: 3rem;
  line-height: 3rem;
  border: 1px solid #d6d6d6;
  display: inline-block;
  margin: 0 0.25rem;
  color: #484848;
  font-size: 17px;
}
.pagination span:hover {
  background-color: inherit;
  border: 1px solid #6b4370;
  color: #6b4370;
}
.pagination span.selected-page:hover {
  background-color: #6b4370;
  color: white;
  border: 1px solid #6b4370;
}
.pagination span.sgds-icon-disabled:hover {
  background-color: white;
  color: #d6d6d6;
  border: 1px solid #d6d6d6;
}
.pagination span.sgds-icon {
  padding: 0 3rem 0 2rem;
  margin: 0 0.75rem;
}
.pagination .selected-page {
  background-color: #6b4370;
  color: white;
  border: 1px solid #6b4370;
}
.pagination .sgds-icon-disabled {
  color: #d6d6d6;
}
.pagination.search {
  display: none;
  justify-content: center;
}
.pagination.search .sgds-icon-disabled {
  pointer-events: none;
}
.pagination.search #paginator-pages span {
  cursor: pointer;
}

#key-highlights {
  background-color: #0487bf;
  color: white;
}
#key-highlights .col {
  transition: all 0.5s;
  border-left: 1px solid #03648d;
}
.key-highlights-text {
  display: block;
  padding: 1.2rem 2rem !important;
}
@media screen and (max-width: 768px) {
  #key-highlights .col {
    border-left: 0;
    border-top: 1px solid #03648d;
  }
}
#key-highlights .col:hover {
  color: #e6e6e6;
  background-color: #03648d;
}
#key-highlights .col p {
  font-size: 16px !important;
  line-height: 22px !important;
}
#key-highlights .col p:nth-child(1) {
  margin-bottom: 5px;
}
#key-highlights .col:first-child {
  border-left: 0;
}
#key-highlights .key-highlight-title {
  letter-spacing: 0.2px !important;
}

.eyebrow {
  font-size: 16px !important;
  letter-spacing: 1.5px;
  font-weight: 400;
  line-height: 22px;
}

.career-container .career-carousel .profile-content {
  position: absolute;
  width: 70%;
  right: 0;
  bottom: 0;
  background-color: #f5a623;
  padding: 1rem;
  color: white;
}
/* ... */

